[gd_scene load_steps=8 format=2]

[ext_resource path="res://TempTextures/GreySquare1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/BumpEnemy.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Hitbox.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="CircleShape2D" id=2]
radius = 70.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 4 )

[node name="Bumper" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerDetector" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 4 )

[node name="Hitbox" type="Area2D" parent="."]
monitoring = false
collision_layer = 4
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[node name="DirectionTimer" type="Timer" parent="."]
[connection signal="area_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_DirectionTimer_timeout"]
